--- a/front-end/src/components/ConvertMusic/ConvertMusic.css
+++ b/front-end/src/components/ConvertMusic/ConvertMusic.css
@@ -27,7 +27,7 @@
 }
 
 .convert-music__url-input {
-  width: 70%;
+  width: 85%;
   padding: 15px 25px;
   font-size: 1.2rem;
   outline: none;
@@ -77,7 +77,7 @@
   gap: 30px;
   transform: translateX(100%);
   opacity: 0;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  /* transition: transform 0.1s ease-in-out, opacity 1s ease-in-out; */
 }
 
 .convert-music__download-box--show {
@@ -92,4 +92,7 @@
 
 .convert-music__download-button:hover {
   scale: 1.1;
+}
+
+@media (max-width: 620px) {
 }
