--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -10,5 +10,6 @@
 body {
   background-image: url(./assets/img/background.webp);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
 }
